; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_pgstat.c_BackendStatusShmemSize.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_pgstat.c_BackendStatusShmemSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NumBackendStatSlots = common dso_local global i32 0, align 4
@NAMEDATALEN = common dso_local global i32 0, align 4
@pgstat_track_activity_query_size = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BackendStatusShmemSize() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @NumBackendStatSlots, align 4
  %3 = call i32 @mul_size(i32 4, i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = load i32, i32* @NAMEDATALEN, align 4
  %6 = load i32, i32* @NumBackendStatSlots, align 4
  %7 = call i32 @mul_size(i32 %5, i32 %6)
  %8 = call i32 @add_size(i32 %4, i32 %7)
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = load i32, i32* @NAMEDATALEN, align 4
  %11 = load i32, i32* @NumBackendStatSlots, align 4
  %12 = call i32 @mul_size(i32 %10, i32 %11)
  %13 = call i32 @add_size(i32 %9, i32 %12)
  store i32 %13, i32* %1, align 4
  %14 = load i32, i32* %1, align 4
  %15 = load i32, i32* @pgstat_track_activity_query_size, align 4
  %16 = load i32, i32* @NumBackendStatSlots, align 4
  %17 = call i32 @mul_size(i32 %15, i32 %16)
  %18 = call i32 @add_size(i32 %14, i32 %17)
  store i32 %18, i32* %1, align 4
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @mul_size(i32, i32) #1

declare dso_local i32 @add_size(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
